# simple_backtester

./: .gitignore  README.md  grid_search_momentum_strat.py  pyproject.toml  run_momentum_strat_backtest.py  run_tests.sh
momentum_strategy/: download_historic_prices.py  momentum_strategy.py
notebooks/: PerformanceAnalysis.ipynb
simple_backtester/: TODO.md  backtester.py  ledger.py  metrics.py
tests/: test_backtester.py  test_get_historic_prices.py  test_metrics.py  test_momentum_strat.py  test_update_ledger.py
