[tool.poetry]
name = "simple_backtester"
version = "0.1.0"
description = ""
authors = ["pdoyle5000 <pdoyle5000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
pandas = "^1.2.0"
numpy = "^1.19.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
typing-extensions = "^3.7.4"
tqdm = "^4.55.0"
pandas-market-calendars = "^1.6.1"
scipy = "^1.6.0"
requests = "^2.25.1"
mypy = "^0.812"
pytest-mypy = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
